Added navigation menu and additional content

--- a/index.html
+++ b/index.html
@@ -19,10 +19,26 @@
             line-height: 1.6;
             color: #666;
         }
+        nav {
+            background-color: #333;
+            padding: 10px;
+            text-align: center;
+        }
+        nav a {
+            color: white;
+            text-decoration: none;
+            margin: 0 10px;
+        }
     </style>
 </head>
 <body>
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+    </nav>
     <h1>Welcome to My Test Page</h1>
     <p>This is a simple HTML page created as part of a GitHub repository test. More content will be added soon!</p>
+    <p>We've now added a navigation menu to make the page more interactive and user-friendly. The navigation links are currently placeholders, but they demonstrate how we can improve the site's structure.</p>
 </body>
 </html>
